k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headstart-frontend-service
spec:
  selector:
    app: headstart-frontend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
